// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`socket actions should generate ConnectServerAction with a new connection 1`] = `
Object {
  "payload": Object {
    "host": "irc.network",
    "newConnection": true,
    "port": 6667,
  },
  "route": Object {
    "bufferKey": "@status",
    "serverKey": "serverKey",
  },
  "type": "SOCKET/CONNECT_TO_SERVER",
}
`;

exports[`socket actions should generate ConnectServerAction with the existing connection 1`] = `
Object {
  "payload": Object {
    "host": "irc.network",
    "newConnection": false,
    "port": 6667,
  },
  "route": Object {
    "bufferKey": "@status",
    "serverKey": "server1",
  },
  "type": "SOCKET/CONNECT_TO_SERVER",
}
`;

exports[`socket actions should generate ConnectionClosedAction 1`] = `
Object {
  "payload": Object {
    "hadError": false,
  },
  "route": Object {
    "bufferKey": "@all",
    "serverKey": "serverKey",
  },
  "type": "SOCKET/CONNECTION_CLOSED",
}
`;

exports[`socket actions should generate ConnectionClosedAction with error 1`] = `
Object {
  "payload": Object {
    "hadError": true,
  },
  "route": Object {
    "bufferKey": "@all",
    "serverKey": "serverKey",
  },
  "type": "SOCKET/CONNECTION_CLOSED",
}
`;

exports[`socket actions should generate ConnectionEstablishedAction 1`] = `
Object {
  "route": Object {
    "bufferKey": "@status",
    "serverKey": "serverKey",
  },
  "type": "SOCKET/CONNECTION_ESTABLISHED",
}
`;

exports[`socket actions should generate LookupFailedAction 1`] = `
Object {
  "payload": Object {
    "error": [Error: error while looking up],
  },
  "route": Object {
    "bufferKey": "@status",
    "serverKey": "serverKey",
  },
  "serverKey": "serverKey",
  "type": "SOCKET/LOOKUP_FAILED",
}
`;

exports[`socket actions should generate LookupSuccessAction 1`] = `
Object {
  "payload": Object {
    "address": "address",
    "family": "family",
    "host": "irc.network",
  },
  "route": Object {
    "bufferKey": "@status",
    "serverKey": "serverKey",
  },
  "serverKey": "serverKey",
  "type": "SOCKET/LOOKUP_SUCCESS",
}
`;
